--- a/kanyeQuote&CatPicAPI/ye_cat_index.html
+++ b/kanyeQuote&CatPicAPI/ye_cat_index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joshs Awesome App Thingy</title>
-    <script defer src="index.js" charset="utf-8"></script>
+    <script defer src="kanyeQuote&CatPicAPI/ye_cat_index.js" charset="utf-8"></script>
 </head>
 <body>
     
